--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         env:
           POSTGRES_USER: pguser
           POSTGRES_PASSWORD: pgpassword
-          POSTGRES_DB: simple-bank
+          POSTGRES_DB: simple_bank
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
