--- a/app.env
+++ b/app.env
@@ -1,5 +1,5 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://pguser:pgpassword@localhost:5432/simple_bank?sslmode=disable
-SERVER_ADDRESS=localhost:8080
+SERVER_ADDRESS=0.0.0.0:8080
 TOKEN_SYMMETRIC_KEY=29137912873198273198273129837198
 ACCESS_TOKEN_DURATION=15m
