--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        role-to-assume: arn:aws:iam::286636751812:user/simple-bank-github
+        role-to-assume: arn:aws:iam::286636751812:role/github-ci
         aws-region: sa-east-1
     
     - name: Login to Amazon ECR
