--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Deploy to production
+name: Run unit tests
 
 on:
   push:
@@ -24,7 +24,8 @@ jobs:
         ports:
           - 5432:5432
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
     - name: Set up Go
       uses: actions/setup-go@v4
