--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,11 +1,16 @@
-name: Deploy to production
+name: Deploy to Production
 
 on:
   push:
     branches: [ "main" ]
+  workflow_run:
+    workflows: ["Run Unit Tests"]
+    branches: [ "main" ]
+    types:
+      - completed
 
 jobs:
-  build:
+  deploy:
     name: Build image
     runs-on: ubuntu-latest
     permissions:
@@ -24,6 +29,9 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v2
+
+    - name: Load secrets and save to app.env
+      run: aws secretsmanager get-secret-value --secret-id simple_bank --query SecretString --output text | jq -r 'to_entries|map("\(.key)=\(.value)")|.[]' > app.env
 
     - name: Build, tag, and push docker image to Amazon ECR
       env:
